Figure alignment issues pending still

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -1055,6 +1055,83 @@
 															A thorough general examination is done before any systemic examination. Vital information such as name, age, sex, height, weight, occupation and address of the individual are recorded. The subject is comfortably seated. The room is well illuminated. It is always preferable to examine under good day light. The examiner should always be on the right side of the subject while examining.
 															\section*{The following observations are recorded:}
 															\subsection*{Level Of Consciousness}
+														\addfig{%
+															\begin{figure}[h]
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/pallor1.jpg}
+																	\subcaption{Site Of Examination of Pallor} 
+																	\label{lpc}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/pallor2.jpg}
+																	\caption{Lower Palpabral Conjunctiva In Severe Anemia}
+																	\label{pallor}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/koilonychia.jpg}
+																	\caption{Koilonychia}
+																	\label{koilonychia}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/jaundice.jpg}
+																	\caption{Icterus}
+																	\label{icterus}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-0.jpg}
+																	\caption{Cyanosis}
+																	\label{cyanosis1}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-1.jpg}
+																	\caption{Cyanosis}
+																	\label{cyanosis2}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-2.jpg}
+																	\caption{Cyanosis}
+																	\label{Cyanosis3}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-3.jpg}
+																	\caption{Cyanosis}
+																	\label{Cyanosis4}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/clubbing3-0.jpg}
+																	\caption{Clubbing}
+																	\label{Clubbing1}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/clubbing3-1.jpg}
+																	\caption{Clubbing}
+																	\label{Clubbing2}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/clubbing3-2.jpg}
+																	\caption{Clubbing}
+																	\label{Clubbing3}
+																\end{subfigure}
+																\begin{subfigure}[t]{.3\textwidth}
+																	\centering
+																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/pittingPedalEdema.jpg}
+																	\caption{Pedal Edema}
+																	\label{PedalEdema}
+																\end{subfigure}
+																\caption*{General Examination}
+															\end{figure}
+															}
 															The level of consciousness can be clear sensorium, drowsiness, stupor, semicoma and coma.
 															\subsection*{Orientation To Time, Place And Person}
 															Ask about the day, date, month, year and time of day. Subject should know where they are (e.g. home or hospital) Similarly test his orientation towards person.
