Figure alignment settled

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -1057,73 +1057,84 @@
 															\subsection*{Level Of Consciousness}
 														\addfig{%
 															\begin{figure}[h]
-																\begin{subfigure}[t]{.3\textwidth}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/pallor1.jpg}
 																	\subcaption{Site Of Examination of Pallor} 
 																	\label{lpc}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/pallor2.jpg}
 																	\caption{Lower Palpabral Conjunctiva In Severe Anemia}
 																	\label{pallor}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/koilonychia.jpg}
 																	\caption{Koilonychia}
 																	\label{koilonychia}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/jaundice.jpg}
 																	\caption{Icterus}
 																	\label{icterus}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-0.jpg}
 																	\caption{Cyanosis}
 																	\label{cyanosis1}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-1.jpg}
 																	\caption{Cyanosis}
 																	\label{cyanosis2}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-2.jpg}
 																	\caption{Cyanosis}
 																	\label{Cyanosis3}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/cyanosis4-3.jpg}
 																	\caption{Cyanosis}
 																	\label{Cyanosis4}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/clubbing3-0.jpg}
 																	\caption{Clubbing}
 																	\label{Clubbing1}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/clubbing3-1.jpg}
 																	\caption{Clubbing}
 																	\label{Clubbing2}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/clubbing3-2.jpg}
 																	\caption{Clubbing}
 																	\label{Clubbing3}
 																\end{subfigure}
-																\begin{subfigure}[t]{.3\textwidth}
+																\hspace{\fill}
+																\begin{subfigure}[t]{.23\textwidth}
 																	\centering
 																	\includegraphics[width=\textwidth]{./clinicalPhysioPic/pittingPedalEdema.jpg}
 																	\caption{Pedal Edema}
