Examination of RS, but table in general examination pending

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -1046,7 +1046,7 @@
 															%-----------}}}
 
 															\part{Clinical Physiology}
-
+%---------------GeneralExamination---{{{
 															\chapter*{\centering General Examination}
 
 															\begin{tabular}{p{5in} p{1in}}
@@ -1282,4 +1282,258 @@ It is the condition where there is accumulation of free fluid in the interstitia
 \item{What are the types of oedema and what are their causes?}
 \item{What are the vital signs?}
 \end{enumerate}
+
+\newpage
+
+\subsection*{\centering Case Sheet - General Examination Of The Subject}
+															\begin{tabular}{p{5in} p{1.5in}}
+																\textbf{Name:}  & \textbf{Age:}\\
+																\textbf{Sex:}   & \textbf{Occupation:}
+															\end{tabular}
+															\begin{itemize}
+\item[]Consciousness and orientation
+\item[]Build and nourishment
+\item[]Afebrile / Febrile
+\item[]Pallor
+\item[]Jaundice
+\item[]Cyanosis
+\item[]Clubbing 
+\item[]Pedal edema
+\item[]Lymphadenopathy
+\item[]Vital Signs:
+	\begin{itemize}
+\item[]	Temperature
+\item[]	Pulse rate
+\item[]	Respiratory rate
+\item[]	Blood pressure
+	\end{itemize}
+															\end{itemize}
+\textbf{Inference:}
+%------------------General Examination---}}}
+%--------------Examination of Respiratory System--{{{
+
+															\chapter*{\centering Examination Of Respiratory System}
+
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+															\subsection*{Introduction}
+															\addfig{%
+																\begin{figure}
+																	\centering
+																	\includegraphics[scale=.5]{./clinicalPhysioPic/AbnormalChestShapes.jpg}
+																	\caption*{Abnormal Chest Shapes}
+																	\label{AbnormalChestShapes}
+																\end{figure}
+																}
+
+
+															\paragraph{Important Anatomical Landmarks:}
+															\begin{itemize}
+\item{Midclavicular line – a vertical line that extends downwards from the midpoint between the middle of the suprasternal notch and the tip of the acromion.}
+\item{Anterior axillary line – a vertical line extending downwards from the anterior axillary fold.}
+\item{Posterior axillary line – a vertical line extending downwards from the posterior axillary fold.}
+\item{Midaxillary line – a vertical line originating at a point midway between the anterior and posterior axillary line.}
+															\end{itemize}
+															\par
+Examination of the respiratory system consists of Inspection, Palpation, Percussion \& Auscultation.
+
+\subsection*{Inspection}
+Ask the subject to sit on a stool with the chest and upper abdomen fully exposed.
+\begin{enumerate}
+\item{\textbf{Shape and symmetry of the chest}}
+	\begin{itemize}
+\item{Examine both the front and back of the chest.}
+\item{Look for any skeletal deformities and drooping of shoulder.}
+\item{Normal chest is bilaterally symmetrical and elliptical in cross section.}
+\item{The transverse diameter is greater than the anteroposterior diameter with a ratio of 7:5  (Hutchinson’s index).}
+\item[]\textbf{Abnormal Findings:}
+	\begin{itemize}
+\item{			Barrel shaped chest - anteroposterior diameter is more than the transverse diameter. It is seen in patients with severe COPD.}
+\item{Pectus carinatum (pigeon chest) is a localized prominence of the sternum and adjacent costal cartilages. Occurs in rickets.}
+\item{Pectus excavatum (funnel chest) is a developmental deformity with a localized depression of the lower end of sternum}
+\item{Kyphosis is forward bending of the spine and Scoliosis is lateral bending. Kyphoscoliosis involves both deformities.}
+	\end{itemize}
+	\end{itemize}
+\item{\textbf{Position of Trachea}}
+	\begin{itemize}
+\item{Stand in front of the subject. Ask the subject to look straight. Observe for any deviation of trachea. Normally, it is in the midline or slightly deviated to the right.}
+\item{Look for any prominence of the sternocleidomastoid muscle. If it is prominent on one side, it indicates tracheal deviation to that side. This is TRIAL’S sign.}
+	\end{itemize}
+\item{\textbf{Apical impulse}\par Look for apical impulse over the precordium. ( Refer CVS Examination )}
+\item{\textbf{Movement of the chest}\par The subject is instructed to take deep breaths. Observe, if the respiratory movements are equal on both sides.}
+\item{\textbf{Respiratory Rate}\par Count the respiratory rate (breaths/min) for one minute, while you divert his attention by palpating the radial pulse. Normal rate ranges from 12-16 breaths / min. Increased rate of respiration is known as Tachypnoea and decreased rate is known as bradypnoea.}
+\item{\textbf{Respiratory Movement}\par The subject is instructed to take deep breaths. Observe, if the respiratory movements are equal on both sides.}
+	\begin{itemize}
+		\item[]\textbf{Type of Respiratory movements:}\par Observe, if the respiration is predominantly thoracic or abdominal. During normal respiration, women use the intercostal muscles more than the diaphragm, and their respiratory movements are predominantly thoracic. Men rely more on the diaphragm and their respiratory movements are predominantly abdominal.
+	\end{itemize}
+\item{\textbf{Respiratory Rhythm}\par Observe, if the rhythm of respiration is regular or irregular.}
+\item{\textbf{Abnormal pulsations, dilated veins, scars and sinuses over the chest wall:}}
+\end{enumerate}
+
+\subsection*{Palpation}
+																\addfig{%
+																	\centering
+																	\begin{figure}
+																	\begin{subfigure}[t]{\textwidth}
+																		\centering
+																		\includegraphics[scale=.5]{./clinicalPhysioPic/trachelShift.jpg}
+																		\caption{Examination Of Tracheal Positionnewline}
+																	\end{subfigure}
+																	\hspace{\fill}
+																	\begin{subfigure}[t]{\textwidth}
+																		\centering
+																		\includegraphics[scale=.5]{./clinicalPhysioPic/chestExpansion_LowerLobe.jpg}
+																		\caption{Examination of chest expansion\newline}
+																	\end{subfigure}
+																	\hspace{\fill}
+																	\begin{subfigure}[t]{\textwidth}
+																		\centering
+																		\includegraphics[scale=.5]{./clinicalPhysioPic/breathSounds.jpg}
+																		\caption{Breath Sounds}
+																	\end{subfigure}
+																	\end{figure}
+																	}
+\begin{enumerate}
+\item{Determine the position of mediastinum by examining the tracheal position and apical impulse.}
+	\begin{itemize}
+		\item[]\textbf{Tracheal Position:}
+			\begin{itemize}
+\item{Ask the subject to sit erect. Keep your index and ring finger of the right hand on medial ends of clavicle. Using the middle finger, gently feel for the trachea and assess whether it is in midline or deviated to one side.}
+\item{Then, insinuate your middle finger into the space between the trachea and the sternocleidomastoid muscle on either side to assess the degree of yielding or resistance. }
+\item{Common causes of Tracheal deviation}
+\item{Towards the side of the lung lesion (pull) - Upper lobe collapse, Upper lobe fibrosis, Pneumonectomy}
+\item{Away from the side of the lung lesion (push) - Tension pneumothorax, Massive pleural effusion}
+			\end{itemize}
+		\item[]\textbf{Apical impulse / Apex beat:}
+			\begin{itemize}
+\item{Palpate the precordium first with palm and then with ulnar border of hand to locate the apical impulse.}
+\item{Place the index finger on the apical impulse and using the other hand, count the intercostal spaces with reference to sternal angle.}
+\item{The normal apical impulse is felt at the left 5th intercostal space, half an inch medial to the left mid clavicular line.}
+			\end{itemize}
+		\item[]\textbf{Shift of mediastinum:} \par Shift of the upper mediastinum causes tracheal deviation. Displacement of apical impulse may indicate shift of lower mediastinum. Displacement of the cardiac impulse without tracheal deviation is usually due to left ventricular enlargement but can occur in scoliosis, kyphoscoliosis or severe pectus excavatum.
+	\end{itemize}
+\item{Respiratory Movements:}
+	\begin{itemize}
+\item{Assess expansion of the lower lobes by placing your hands firmly on the anterior chest wall. Extend your fingers around the sides of the subject’s chest. }
+\item{Your thumbs should almost meet in the midline and hover just off the chest so that they can move freely with respiration.}
+\item{Ask the subject to take deep breaths. Observe, whether your thumbs move equally on both sides.}
+\item{To examine the movement of apical lobes, place the hands over the shoulders on both sides from behind. The degree of lift of the fingers indicates the degree of expansion of the apical lobes.}
+\item{Examine the lower lobes of the lungs as explained before by placing the hands in the infrascapular area.}
+\item{Reduced expansion on one side indicates abnormality on that side such as pleural effusion, lung collapse, pneumothorax and fibrosis}
+	\end{itemize}
+\item{Chest Expansion:}
+	\begin{itemize}
+\item{The chest expansion is measured quantitatively by using a measuring tape.}
+\item{Hold the measuring tape around the chest wall just below the level of nipples.}
+\item{The difference in expansion after a full expiration and a deep inspiration is the total chest expansion.}
+\item{The normal expansion ranges from 5 to 8 $cm$.}
+\item{It is decreased in restrictive lung diseases.}
+	\end{itemize}
+\item{Vocal fremitus / Tactile vocal fremitus:}
+	\begin{itemize}
+\item{	Ask the subject to repeat the word "ONE" or "NINETY NINE" in a clear voice.}
+\item{Feel the vibrations using ulnar border of the hand in each intercostal space and compare it with the other side consecutively.}
+\item{VF is increased in consolidation of lungs.}
+\item{VF is decreased in pleural effusion and empyema.}
+	\end{itemize}
+\end{enumerate}
+
+
+\subsection*{Percussion}
+Percussion  allows  you  to  hear  the  pitch  and  loudness  of  the  percussed  note.  Percussion is done in sequence over corresponding areas on both sides of the chest.
+
+\paragraph{Rules of percussion}
+\begin{itemize}
+\item{Place the middle finger of the left hand (Pleximeter finger) firmly against the chest,}
+\item{aligned in the intercostal space.}
+\item{Strike the centre of the middle phalanx of Pleximeter finger with the tip of your right middle finger (Percussing finger). Use a loose swinging movement of the wrist and not the forearm.}
+\item{The long axis of the pleximeter finger should be parallel to the border of the organ being percussed.}
+\item{Percussion is performed from a more resonant to less resonant area}
+\end{itemize}
+
+\paragraph{Methods of Percussion:}
+\begin{itemize}
+\item{Direct  percussion  -  Percuss  directly  over  the  medial  third  of  clavicles  without  an intervening finger.}
+\item{Percuss the lung apices by placing the finger in the supraclavicular fossa.}
+\item{Continue the percussion downwards on the anterior chest wall, axillae and posterior chest wall covering all the lung areas.}
+\item{Always  compare  the  percussion  note  on  the  two  sides  of  the  chest systematically, moving from one side to the other side. Do not percuss all the way down one side and then down the other.}
+\item{Normal lung produces a resonant note.}
+\end{itemize}
+
+\paragraph{Percussion Notes}
+\begin{itemize}
+\item{Resonant 		- 	Normal lung}
+\item{Hyperresonant 	-	Pneumothorax}
+\item{Dull 			-	Lung Consolidation, lung collapse, severe pulmonary 					fibrosis }
+\item{Stony dull 		-	Pleural effusion}
+\end{itemize}
+
+\paragraph{Positioning Of Subject For Percussion:}
+\textbf{To Percuss Lateral chest wall:}Ask the subject to keep the hands over the head.
+\textbf{To Percuss Posterior chest wall:}Ask the subject to fold the arms across the front of the chest which will move the scapulae laterally.
+
+\subsection*{Auscultation:}
+\begin{itemize}
+\item{The  stethoscope  is  used  to  auscultate  the  breath  sounds,  added  sounds  and  vocal resonance.}
+\item{Instruct the subject to take deep breaths with open mouth.}
+\item{With the diaphragm of the stethoscope, auscultate all areas of the lung.}
+\item{As with percussion, listen to the sounds in comparable positions on either side alternately, switching back and forth from one side to the other side.}
+\item{Normal breath sounds auscultated are known as Vesicular breath sounds. They are low pitched and have a rustling quality. There is no distinct pause between the end of inspiration and the beginning of expiration. Sound is heard throughout inspiration and only during one third of expiration.}
+\item{Abnormal breath sounds are known as bronchial breath sounds.}
+\end{itemize}
+
+\paragraph{Bronchial Breath Sounds:}
+\begin{itemize}
+\item{It is a high-pitched breath sound with a hollow or blowing quality. The breath sounds are heard throughout inspiration and expiration. There is a distinct pause between the inspiration and expiration.}
+\item{Bronchial breath sounds are heard in pulmonary consolidation (pneumonia) and in fibrosis.}
+\end{itemize}
+
+\paragraph{Causes for absence of breath sounds}
+\begin{itemize}
+	\item[]Pleural effusion, Pneumothorax.
+\end{itemize}
+
+\paragraph{Vocal Resonance:}
+\begin{itemize}
+\item{It is the auscultatory component of vocal fremitus.}
+\item{Ask the subject to repeat ''ONE'' and auscultate in all the lung areas consecutively on both sides to assess the quality and amplitude of vocal resonance.}
+\item{Vocal resonance is increased in consolidation and decreased in pleural effusion, pneumothorax and fibrosis.}
+\end{itemize}
+
+\paragraph{Adventitious or Added Sounds}
+There are abnormal sounds that arise in the lung or in the pleura.
+\begin{itemize}
+\item{\textbf{Wheeze / Rhonchi:}\par Wheeze is a continuous musical sound, heard due to narrowing of airways. It is heard in bronchial asthma.}
+\item{\textbf{Crackles/ Rales/ Crepitations:}\par Crackles are short, explosive sounds often described as bubbling sounds. Crackles may result from sudden opening of previously closed small airways. It may also be heard when air bubbles through secretions in major bronchi. It is heard in bronchiectasis and pulmonary edema.}
+\item{\textbf{Pleural rub:}\par It is a creaking sound produced when inflamed parietal and visceral pleurae slide over one another. It is heard in pleuritis.}
+\end{itemize}
+
+\paragraph{Note:}
+Examination of respiratory system is carried out in the following lung areas.
+\begin{itemize}
+\item{Supraclavicular}
+\item{Infraclavicular}
+\item{Mammary}
+\item{Inframammary}
+\item{Axillary}
+\item{Infraaxillary}
+\item{Suprascapular}
+\item{Interscapular}
+\item{Infrascapular}
+\end{itemize}
+
+\subsection*{Questions:}
+\begin{enumerate}
+\item{What is the normal Respiratory rate?}
+\item{What is Tachypnoea?}
+\item{What is dyspnoea?}
+\item{Name the muscles of inspiration and expiration.}
+\item{Name one condition in which vocal fremitus is increased and decreased.}
+\item{What are the normal breath sounds?}
+\item{What are Wheezes and Crackles?}
+\end{enumerate}
+%-------------------------}}}
 											    \end{document}
+											    
+
