small change in figure caption in RS examination

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -1378,13 +1378,13 @@ Ask the subject to sit on a stool with the chest and upper abdomen fully exposed
 																	\begin{subfigure}[t]{\textwidth}
 																		\centering
 																		\includegraphics[scale=.5]{./clinicalPhysioPic/trachelShift.jpg}
-																		\caption{Examination Of Tracheal Positionnewline}
+																		\caption{Examination Of Tracheal Position}
 																	\end{subfigure}
 																	\hspace{\fill}
 																	\begin{subfigure}[t]{\textwidth}
 																		\centering
 																		\includegraphics[scale=.5]{./clinicalPhysioPic/chestExpansion_LowerLobe.jpg}
-																		\caption{Examination of chest expansion\newline}
+																		\caption{Examination of chest expansion}
 																	\end{subfigure}
 																	\hspace{\fill}
 																	\begin{subfigure}[t]{\textwidth}
